--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0",
-    "react": "^19.2.3",
-    "recharts": "^3.6.0",
-    "@google/genai": "^1.37.0",
-    "framer-motion": "^12.26.2"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "lucide-react": "0.344.0",
+    "recharts": "2.12.2",
+    "@google/genai": "0.1.1",
+    "framer-motion": "11.0.8"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
