--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "lucide-react": "0.344.0",
-    "recharts": "2.12.2",
+    "lucide-react": "0.294.0",
+    "framer-motion": "10.16.5",
+    "recharts": "2.10.3",
     "@google/genai": "0.1.1",
-    "framer-motion": "11.0.8"
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
